# sandbox

./: .travis.yml  MANIFEST.in  README.rst  setup.cfg  setup.py  tox.ini
.github/workflows/: check_stale_prs.yml  stale.yml
docs/: conf.py  index.rst
docs/sandbox/: index.rst
licenses/: LICENSE.rst
