[metadata]
name = sandbox
author = Devs
author_email = 
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = https://github.com/larrybradley/sandbox
description = Sandbox
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = larrybradley/sandbox

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires = setuptools_scm
install_requires =
    astropy
    photutils

[options.entry_points]
console_scripts =
    astropy-package-template-example = packagename.example_mod:main

[options.extras_require]
all =
    scipy
    matplotlib
    scikit-image
    scikit-learn
test =
    pytest-astropy
docs =
    sphinx-astropy

[options.package_data]
sandbox = data/*

[tool:pytest]
testpaths = "sandbox" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    sandbox/_astropy_init*
    sandbox/conftest.py
    sandbox/*setup_package*
    sandbox/tests/*
    sandbox/*/tests/*
    sandbox/extern/*
    sandbox/version*
    */sandbox/_astropy_init*
    */sandbox/conftest.py
    */sandbox/*setup_package*
    */sandbox/tests/*
    */sandbox/*/tests/*
    */sandbox/extern/*
    */sandbox/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
